--- a/Contact.css
+++ b/Contact.css
@@ -70,10 +70,10 @@ nav li {
 
 nav a {
   font-family: 'Indie Flower', cursive;
-  color: lightblue;
-  text-decoration: none;
   text-transform: uppercase;
-  font-size: 14px;
+  text-decoration: none;
+  color: lightblue;
+  font-size: 15px;
 }
 
 nav a:hover {
@@ -83,17 +83,17 @@ nav a:hover {
 input[type='text'],
 select,
 textarea {
-  width: 100%; /* Full width */
-  padding: 12px; /* Some padding */
-  border: 1px solid #ccc; /* Gray border */
-  border-radius: 4px; /* Rounded borders */
-  box-sizing: border-box; /* Make sure that padding and width stays in place */
-  margin-top: 6px; /* Add a top margin */
-  margin-bottom: 16px; /* Bottom margin */
-  resize: vertical; /* Allow the user to vertically resize the textarea (not horizontally) */
+  margin-bottom: 17px; 
+  padding: 13px; 
+  border: 1px solid #ccc; 
+  box-sizing: border-box; 
+  border-radius: 5px; 
+  margin-top: 7px; 
+  width: 100%; 
+  resize: vertical; 
 }
 
-/* Style the submit button with a specific background color etc */
+
 input[type='submit'] {
   background-color: #4caf50;
   color: white;
@@ -103,12 +103,12 @@ input[type='submit'] {
   cursor: pointer;
 }
 
-/* When moving the mouse over the submit button, add a darker green color */
+
 input[type='submit']:hover {
   background-color: #45a049;
 }
 
-/* Add a background color and some padding around the form */
+
 .contain {
   border-radius: 5px;
   background-color: #f2f2f2;
@@ -116,16 +116,115 @@ input[type='submit']:hover {
 }
 
 input[type='email'] {
-  width: 100%; /* Full width */
-  padding: 12px; /* Some padding */
-  border: 1px solid #ccc; /* Gray border */
-  border-radius: 4px; /* Rounded borders */
-  box-sizing: border-box; /* Make sure that padding and width stays in place */
-  margin-top: 6px; /* Add a top margin */
-  margin-bottom: 16px; /* Bottom margin */
-  resize: vertical; /* Allow the user to vertically resize the textarea (not horizontally) */
+  padding: 13px; 
+  border: 1px solid #ccccee; 
+  margin-top: 7px; 
+  box-sizing: border-box;
+  border-radius: 4px; 
+  width: 100%;
+  margin-bottom: 15px; 
+  resize: vertical; 
 }
+
 
 #order {
   display: none;
+}
+
+.footer {
+  position: relative;
+  top: 0;
+  width: 100vw;
+  display: block;
+  overflow: hidden;
+  padding: 70px 0;
+  box-sizing: border-box;
+  background-color: #18181a;
+}
+
+.interiorFooter {
+  display: block;
+  margin: 0 auto;
+  width: 1100px;
+  height: 100%;
+}
+
+.interiorFooter .footerLogo {
+  width: 35%;
+  float: left;
+  height: 100%;
+  display: block;
+}
+
+.interiorFooter .footerLogo img {
+  width: 200px;
+  height: 200px;
+  border-radius: 15px;
+}
+
+.interiorFooter .footerClass {
+  width: calc(20% - 20px);
+  margin-right: 10px;
+  float: left;
+  height: 20%;
+}
+
+
+.interiorFooter .footerClass h1 {
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: 22px;
+  color: azure;
+  display: block;
+  width: 100%;
+  margin-bottom: 20px;
+}
+.interiorFooter .footerClass:last-child {
+margin-right: 0;
+}
+
+.interiorFooter .footerClass a {
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: 18px;
+  color: azure;
+  display: block;
+  width: 100%;
+  margin-bottom: 20px;
+  font-weight: 200;
+  padding-bottom: 5px;
+}
+
+.interiorFooter .footerClass li {
+  display: inline-block;
+  padding: 0;
+  font-size: 20px;
+}
+
+.interiorFooter .footerClass span {
+  color: white;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: 16px;
+  font-weight: 200px;
+  display: block;
+  width: 100%;
+  padding-top: 20px;
+}
+
+@media (max-width: 600px) {
+  .footer .interiorFooter {
+    width: 90%;
+  }
+
+  .interiorFooter .footerLogo,
+  .interiorFooter .footerClass {
+    width: 100%;
+    margin-bottom: 30px;
+  }
+}
+
+.Post p {
+  color: white;
+}
+
+.Post label {
+  color: #f1f1f1;
 }
